--- a/package.json
+++ b/package.json
@@ -10,19 +10,23 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
-    "expo": "~51.0.25",
+    "appwrite": "^14.0.0",
+    "dotenv": "^16.4.5",
+    "expo": "~51.0.31",
     "expo-constants": "~16.0.2",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.21",
+    "expo-router": "~3.5.23",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "^0.74.5",
+    "react-native-appwrite": "^0.3.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4"
