--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
     "appwrite": "^14.0.0",
-    "dotenv": "^16.4.5",
     "expo": "~51.0.31",
+    "expo-av": "^14.0.7",
     "expo-constants": "~16.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
